Remove Light Bootstrap Dashboard

--- a/public/css/lbd.css
+++ b/public/css/lbd.css
@@ -1,3 +1,264 @@
+/*
+ * The MIT License
+ * Copyright (c) 2012 Matias Meno <m@tias.me>
+ */
+@-webkit-keyframes passing-through {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+    transform: translateY(40px); }
+  30%, 70% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-40px);
+    transform: translateY(-40px); } }
+@keyframes passing-through {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+    transform: translateY(40px); }
+  30%, 70% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(-40px);
+    transform: translateY(-40px); } }
+@-webkit-keyframes slide-in {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+    transform: translateY(40px); }
+  30% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); } }
+@keyframes slide-in {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+    transform: translateY(40px); }
+  30% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px); } }
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  10% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); }
+  20% {
+    -webkit-transform: scale(1);
+    transform: scale(1); } }
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  10% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); }
+  20% {
+    -webkit-transform: scale(1);
+    transform: scale(1); } }
+.dropzone, .dropzone * {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
+.dropzone {
+  min-height: 150px;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  background: white;
+  padding: 20px 20px; }
+  .dropzone.dz-clickable {
+    cursor: pointer; }
+    .dropzone.dz-clickable * {
+      cursor: default; }
+    .dropzone.dz-clickable .dz-message, .dropzone.dz-clickable .dz-message * {
+      cursor: pointer; }
+  .dropzone.dz-started .dz-message {
+    display: none; }
+  .dropzone.dz-drag-hover {
+    border-style: solid; }
+    .dropzone.dz-drag-hover .dz-message {
+      opacity: 0.5; }
+  .dropzone .dz-message {
+    text-align: center;
+    margin: 2em 0; }
+  .dropzone .dz-preview {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    margin: 16px;
+    min-height: 100px; }
+    .dropzone .dz-preview:hover {
+      z-index: 1000; }
+      .dropzone .dz-preview:hover .dz-details {
+        opacity: 1; }
+    .dropzone .dz-preview.dz-file-preview .dz-image {
+      border-radius: 20px;
+      background: #999;
+      background: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#ddd));
+      background: linear-gradient(to bottom, #eee, #ddd); }
+    .dropzone .dz-preview.dz-file-preview .dz-details {
+      opacity: 1; }
+    .dropzone .dz-preview.dz-image-preview {
+      background: white; }
+      .dropzone .dz-preview.dz-image-preview .dz-details {
+        -webkit-transition: opacity 0.2s linear;
+        transition: opacity 0.2s linear; }
+    .dropzone .dz-preview .dz-remove {
+      font-size: 14px;
+      text-align: center;
+      display: block;
+      cursor: pointer;
+      border: none; }
+      .dropzone .dz-preview .dz-remove:hover {
+        text-decoration: underline; }
+    .dropzone .dz-preview:hover .dz-details {
+      opacity: 1; }
+    .dropzone .dz-preview .dz-details {
+      z-index: 20;
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      font-size: 13px;
+      min-width: 100%;
+      max-width: 100%;
+      padding: 2em 1em;
+      text-align: center;
+      color: rgba(0, 0, 0, 0.9);
+      line-height: 150%; }
+      .dropzone .dz-preview .dz-details .dz-size {
+        margin-bottom: 1em;
+        font-size: 16px; }
+      .dropzone .dz-preview .dz-details .dz-filename {
+        white-space: nowrap; }
+        .dropzone .dz-preview .dz-details .dz-filename:hover span {
+          border: 1px solid rgba(200, 200, 200, 0.8);
+          background-color: rgba(255, 255, 255, 0.8); }
+        .dropzone .dz-preview .dz-details .dz-filename:not(:hover) {
+          overflow: hidden;
+          text-overflow: ellipsis; }
+          .dropzone .dz-preview .dz-details .dz-filename:not(:hover) span {
+            border: 1px solid transparent; }
+      .dropzone .dz-preview .dz-details .dz-filename span, .dropzone .dz-preview .dz-details .dz-size span {
+        background-color: rgba(255, 255, 255, 0.4);
+        padding: 0 0.4em;
+        border-radius: 3px; }
+    .dropzone .dz-preview:hover .dz-image img {
+      -webkit-transform: scale(1.05, 1.05);
+      transform: scale(1.05, 1.05);
+      -webkit-filter: blur(8px);
+      filter: blur(8px); }
+    .dropzone .dz-preview .dz-image {
+      border-radius: 20px;
+      overflow: hidden;
+      width: 120px;
+      height: 120px;
+      position: relative;
+      display: block;
+      z-index: 10; }
+      .dropzone .dz-preview .dz-image img {
+        display: block; }
+    .dropzone .dz-preview.dz-success .dz-success-mark {
+      -webkit-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
+      animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1); }
+    .dropzone .dz-preview.dz-error .dz-error-mark {
+      opacity: 1;
+      -webkit-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
+      animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1); }
+    .dropzone .dz-preview .dz-success-mark, .dropzone .dz-preview .dz-error-mark {
+      pointer-events: none;
+      opacity: 0;
+      z-index: 500;
+      position: absolute;
+      display: block;
+      top: 50%;
+      left: 50%;
+      margin-left: -27px;
+      margin-top: -27px; }
+      .dropzone .dz-preview .dz-success-mark svg, .dropzone .dz-preview .dz-error-mark svg {
+        display: block;
+        width: 54px;
+        height: 54px; }
+    .dropzone .dz-preview.dz-processing .dz-progress {
+      opacity: 1;
+      -webkit-transition: all 0.2s linear;
+      transition: all 0.2s linear; }
+    .dropzone .dz-preview.dz-complete .dz-progress {
+      opacity: 0;
+      -webkit-transition: opacity 0.4s ease-in;
+      transition: opacity 0.4s ease-in; }
+    .dropzone .dz-preview:not(.dz-processing) .dz-progress {
+      -webkit-animation: pulse 6s ease infinite;
+      animation: pulse 6s ease infinite; }
+    .dropzone .dz-preview .dz-progress {
+      opacity: 1;
+      z-index: 1000;
+      pointer-events: none;
+      position: absolute;
+      height: 16px;
+      left: 50%;
+      top: 50%;
+      margin-top: -8px;
+      width: 80px;
+      margin-left: -40px;
+      background: rgba(255, 255, 255, 0.9);
+      -webkit-transform: scale(1);
+      border-radius: 8px;
+      overflow: hidden; }
+      .dropzone .dz-preview .dz-progress .dz-upload {
+        background: #333;
+        background: -webkit-gradient(linear, left top, left bottom, from(#666), to(#444));
+        background: linear-gradient(to bottom, #666, #444);
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 0;
+        -webkit-transition: width 300ms ease-in-out;
+        transition: width 300ms ease-in-out; }
+    .dropzone .dz-preview.dz-error .dz-error-message {
+      display: block; }
+    .dropzone .dz-preview.dz-error:hover .dz-error-message {
+      opacity: 1;
+      pointer-events: auto; }
+    .dropzone .dz-preview .dz-error-message {
+      pointer-events: none;
+      z-index: 1000;
+      position: absolute;
+      display: block;
+      display: none;
+      opacity: 0;
+      -webkit-transition: opacity 0.3s ease;
+      transition: opacity 0.3s ease;
+      border-radius: 8px;
+      font-size: 13px;
+      top: 130px;
+      left: -10px;
+      width: 140px;
+      background: #be2626;
+      background: -webkit-gradient(linear, left top, left bottom, from(#be2626), to(#a92222));
+      background: linear-gradient(to bottom, #be2626, #a92222);
+      padding: 0.5em 1.2em;
+      color: white; }
+      .dropzone .dz-preview .dz-error-message:after {
+        content: '';
+        position: absolute;
+        top: -6px;
+        left: 64px;
+        width: 0;
+        height: 0;
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        border-bottom: 6px solid #be2626; }
 /*!
 
  =========================================================
@@ -5211,578 +5472,4 @@ License - nucleoapp.com/license/
 }
 
 /* all icon font classes list here */
-
-/*--------------------------------
-
-nucleo-icons Web Font - built using nucleoapp.com
-License - nucleoapp.com/license/
-
--------------------------------- */
-
-@font-face {
-  font-family: 'nucleo-icons';
-  src: url(/fonts/nucleo-icons.eot?8224e0160e362e117cbe00495919e2af);
-  src: url(/fonts/nucleo-icons.eot?8224e0160e362e117cbe00495919e2af) format("embedded-opentype"), url(/fonts/nucleo-icons.woff2?ff208b8d733e61a630992ee2b72c9c1c) format("woff2"), url(/fonts/nucleo-icons.woff?861720fa94b80958075f620b2c6e8fb9) format("woff"), url(/fonts/nucleo-icons.ttf?b0dc05d015e91e7d28d79cd0056fe555) format("truetype"), url(/fonts/nucleo-icons.svg?ae42fa524981a56f3f289447cff36eb1) format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-/*------------------------
-	base class definition
--------------------------*/
-
-.nc-icon {
-  display: inline-block;
-  font: normal normal normal 14px/1 'nucleo-icons';
-  font-size: inherit;
-  speak: none;
-  text-transform: none;
-  /* Better Font Rendering */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-/*------------------------
-  change icon size
--------------------------*/
-
-.nc-icon.lg {
-  font-size: 1.33333333em;
-  vertical-align: -16%;
-}
-
-.nc-icon.x2 {
-  font-size: 2em;
-}
-
-.nc-icon.x3 {
-  font-size: 3em;
-}
-
-/*----------------------------------
-  add a square/circle background
------------------------------------*/
-
-.nc-icon.square,
-.nc-icon.circle {
-  padding: 0.33333333em;
-  vertical-align: -16%;
-  background-color: #eee;
-}
-
-.nc-icon.circle {
-  border-radius: 50%;
-}
-
-/*------------------------
-  list icons
--------------------------*/
-
-.nc-icon-ul {
-  padding-left: 0;
-  margin-left: 2.14285714em;
-  list-style-type: none;
-}
-
-.nc-icon-ul > li {
-  position: relative;
-}
-
-.nc-icon-ul > li > .nc-icon {
-  position: absolute;
-  left: -1.57142857em;
-  top: 0.14285714em;
-  text-align: center;
-}
-
-.nc-icon-ul > li > .nc-icon.lg {
-  top: 0;
-  left: -1.35714286em;
-}
-
-.nc-icon-ul > li > .nc-icon.circle,
-.nc-icon-ul > li > .nc-icon.square {
-  top: -0.19047619em;
-  left: -1.9047619em;
-}
-
-.all-icons .font-icon-list .font-icon-detail i {
-  font-size: 32px;
-}
-
-/*------------------------
-  spinning icons
--------------------------*/
-
-.nc-icon.spin {
-  -webkit-animation: nc-icon-spin 2s infinite linear;
-  animation: nc-icon-spin 2s infinite linear;
-}
-
-@-webkit-keyframes nc-icon-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes nc-icon-spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-/*------------------------
-  rotated/flipped icons
--------------------------*/
-
-.nc-icon.rotate-90 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-
-.nc-icon.rotate-180 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
-}
-
-.nc-icon.rotate-270 {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
-  -webkit-transform: rotate(270deg);
-  transform: rotate(270deg);
-}
-
-.nc-icon.flip-y {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0);
-  -webkit-transform: scale(-1, 1);
-  transform: scale(-1, 1);
-}
-
-.nc-icon.flip-x {
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
-  -webkit-transform: scale(1, -1);
-  transform: scale(1, -1);
-}
-
-/*------------------------
-	font icons
--------------------------*/
-
-.nc-air-baloon::before {
-  content: "\EA01";
-}
-
-.nc-album-2::before {
-  content: "\EA02";
-}
-
-.nc-alien-33::before {
-  content: "\EA03";
-}
-
-.nc-align-center::before {
-  content: "\EA04";
-}
-
-.nc-align-left-2::before {
-  content: "\EA05";
-}
-
-.nc-ambulance::before {
-  content: "\EA06";
-}
-
-.nc-android::before {
-  content: "\EA07";
-}
-
-.nc-app::before {
-  content: "\EA08";
-}
-
-.nc-apple::before {
-  content: "\EA09";
-}
-
-.nc-atom::before {
-  content: "\EA0A";
-}
-
-.nc-attach-87::before {
-  content: "\EA0B";
-}
-
-.nc-audio-92::before {
-  content: "\EA0C";
-}
-
-.nc-backpack::before {
-  content: "\EA0D";
-}
-
-.nc-badge::before {
-  content: "\EA0E";
-}
-
-.nc-bag::before {
-  content: "\EA0F";
-}
-
-.nc-bank::before {
-  content: "\EA10";
-}
-
-.nc-battery-81::before {
-  content: "\EA11";
-}
-
-.nc-bell-55::before {
-  content: "\EA12";
-}
-
-.nc-bold::before {
-  content: "\EA13";
-}
-
-.nc-bulb-63::before {
-  content: "\EA14";
-}
-
-.nc-bullet-list-67::before {
-  content: "\EA15";
-}
-
-.nc-bus-front-12::before {
-  content: "\EA16";
-}
-
-.nc-button-pause::before {
-  content: "\EA17";
-}
-
-.nc-button-play::before {
-  content: "\EA18";
-}
-
-.nc-button-power::before {
-  content: "\EA19";
-}
-
-.nc-camera-20::before {
-  content: "\EA1A";
-}
-
-.nc-caps-small::before {
-  content: "\EA1B";
-}
-
-.nc-cart-simple::before {
-  content: "\EA1C";
-}
-
-.nc-cctv::before {
-  content: "\EA1D";
-}
-
-.nc-chart-bar-32::before {
-  content: "\EA1E";
-}
-
-.nc-chart-pie-35::before {
-  content: "\EA1F";
-}
-
-.nc-chart-pie-36::before {
-  content: "\EA20";
-}
-
-.nc-chart::before {
-  content: "\EA21";
-}
-
-.nc-chat-round::before {
-  content: "\EA22";
-}
-
-.nc-check-2::before {
-  content: "\EA23";
-}
-
-.nc-circle-09::before {
-  content: "\EA24";
-}
-
-.nc-circle::before {
-  content: "\EA25";
-}
-
-.nc-cloud-download-93::before {
-  content: "\EA26";
-}
-
-.nc-cloud-upload-94::before {
-  content: "\EA27";
-}
-
-.nc-compass-05::before {
-  content: "\EA28";
-}
-
-.nc-controller-modern::before {
-  content: "\EA29";
-}
-
-.nc-credit-card::before {
-  content: "\EA2A";
-}
-
-.nc-delivery-fast::before {
-  content: "\EA2B";
-}
-
-.nc-email-83::before {
-  content: "\EA2C";
-}
-
-.nc-email-85::before {
-  content: "\EA2D";
-}
-
-.nc-explore-2::before {
-  content: "\EA2E";
-}
-
-.nc-fav-remove::before {
-  content: "\EA2F";
-}
-
-.nc-favourite-28::before {
-  content: "\EA30";
-}
-
-.nc-globe-2::before {
-  content: "\EA31";
-}
-
-.nc-grid-45::before {
-  content: "\EA32";
-}
-
-.nc-headphones-2::before {
-  content: "\EA33";
-}
-
-.nc-html5::before {
-  content: "\EA34";
-}
-
-.nc-istanbul::before {
-  content: "\EA35";
-}
-
-.nc-key-25::before {
-  content: "\EA36";
-}
-
-.nc-layers-3::before {
-  content: "\EA37";
-}
-
-.nc-light-3::before {
-  content: "\EA38";
-}
-
-.nc-lock-circle-open::before {
-  content: "\EA39";
-}
-
-.nc-map-big::before {
-  content: "\EA3A";
-}
-
-.nc-mobile::before {
-  content: "\EA3C";
-}
-
-.nc-money-coins::before {
-  content: "\EA3B";
-}
-
-.nc-note-03::before {
-  content: "\EA3D";
-}
-
-.nc-notes::before {
-  content: "\EA3E";
-}
-
-.nc-notification-70::before {
-  content: "\EA3F";
-}
-
-.nc-palette::before {
-  content: "\EA40";
-}
-
-.nc-paper-2::before {
-  content: "\EA41";
-}
-
-.nc-pin-3::before {
-  content: "\EA42";
-}
-
-.nc-planet::before {
-  content: "\EA43";
-}
-
-.nc-preferences-circle-rotate::before {
-  content: "\EA44";
-}
-
-.nc-puzzle-10::before {
-  content: "\EA45";
-}
-
-.nc-quote::before {
-  content: "\EA46";
-}
-
-.nc-refresh-02::before {
-  content: "\EA47";
-}
-
-.nc-ruler-pencil::before {
-  content: "\EA48";
-}
-
-.nc-satisfied::before {
-  content: "\EA49";
-}
-
-.nc-scissors::before {
-  content: "\EA4A";
-}
-
-.nc-send::before {
-  content: "\EA4B";
-}
-
-.nc-settings-90::before {
-  content: "\EA4C";
-}
-
-.nc-settings-gear-64::before {
-  content: "\EA4D";
-}
-
-.nc-settings-tool-66::before {
-  content: "\EA4E";
-}
-
-.nc-simple-add::before {
-  content: "\EA4F";
-}
-
-.nc-simple-delete::before {
-  content: "\EA50";
-}
-
-.nc-simple-remove::before {
-  content: "\EA51";
-}
-
-.nc-single-02::before {
-  content: "\EA52";
-}
-
-.nc-single-copy-04::before {
-  content: "\EA53";
-}
-
-.nc-spaceship::before {
-  content: "\EA54";
-}
-
-.nc-square-pin::before {
-  content: "\EA55";
-}
-
-.nc-stre-down::before {
-  content: "\EA56";
-}
-
-.nc-stre-left::before {
-  content: "\EA57";
-}
-
-.nc-stre-right::before {
-  content: "\EA58";
-}
-
-.nc-stre-up::before {
-  content: "\EA59";
-}
-
-.nc-sun-fog-29::before {
-  content: "\EA5A";
-}
-
-.nc-support-17::before {
-  content: "\EA5B";
-}
-
-.nc-tablet-2::before {
-  content: "\EA5C";
-}
-
-.nc-tag-content::before {
-  content: "\EA5D";
-}
-
-.nc-tap-01::before {
-  content: "\EA5E";
-}
-
-.nc-time-alarm::before {
-  content: "\EA5F";
-}
-
-.nc-tv-2::before {
-  content: "\EA60";
-}
-
-.nc-umbrella-13::before {
-  content: "\EA61";
-}
-
-.nc-vector::before {
-  content: "\EA62";
-}
-
-.nc-watch-time::before {
-  content: "\EA63";
-}
-
-.nc-zoom-split::before {
-  content: "\EA64";
-}
-
-/* all icon font classes list here */
-
-.entity-count {
-  margin: 0.5em 0 0.3em 1em;
-  padding-top: 0.7em;
-}
 
