--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,10 +5,27 @@
 // Variables
 @import "variables";
 
-// Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+@import "~dropzone/dist/dropzone.css";
+
+@import "./dashboard";
 
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.entity-count {
+  margin: 0.5em 0 0.3em 1em;
+  padding-top: 0.7em;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
 }
