--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -38,3 +38,7 @@ body {
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+
+textarea[name=textual_scenes] {
+  font-family: Hack, monospace;
+}
