Delete images & passage action

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10399,3 +10399,13 @@ textarea[name=textual_scenes] {
   font-family: Hack, monospace;
 }
 
+figure.figure {
+  position: relative;
+}
+
+figure.figure .delete-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
