--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,10 @@
 
 @import "./dashboard";
 
+main {
+  padding-top: 60px;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
